tdf#158110 - Paste special: Remove special ADDNOTES flag handling

Remove special ADDNOTES flag handling and just add it to existing NOTE flag to ensure no content will be deleted. However, the check for empty cells needs to be improved.

Change-Id: I44ae75aa3997a0b1041447106bc3c07146043351
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/167202
Reviewed-by: Andreas Heinisch <andreas.heinisch@yahoo.de>
Tested-by: Jenkins